<resources>
    <string name="web_client" translatable="false">606677120108-bh0fgmhrf66okjfkg3lr657p9re9iutl.apps.googleusercontent.com</string>
    <string name="app_name">masrofy</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="transaction_category">Category</string>
    <string name="transaction">Transaction</string>
    <string name="transactions">Transactions</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
    <string name="account">account</string>
    <string name="delete">Delete</string>
    <string name="statistic">statistic</string>
    <string name="mybalance">My Balance</string>
    <string name="show_more">show more</string>
    <string name="top_transactions">Top Transactions</string>
    <string name="confirm">Confirm</string>
    <string name="this_week">Your Transaction This Week (last 7 days)</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="monthly_transaction">Your Transactions This Year</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="decmber">Dec</string>
    <string name="no_transactions">No Transactions</string>
    <string name="categories">Categories %s</string>
    <string name="cancel">cancel</string>
    <string name="sure_delete_category">Are you sure to Delete?</string>
    <string name="delete_category">Delete category?</string>
    <string name="icon">icon</string>
    <string name="settings">Settings</string>
    <string name="app_settings">App Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="currency">Currency</string>
    <string name="back_up">Back up</string>
    <string name="import_">Import</string>
    <string name="import_export"><![CDATA[Import & Export]]></string>
    <string name="change_currency">Change Currency</string>
    <string name="are_you_sure">are you sure ?</string>
    <string name="goole_drive_backup">Google Drive Backup</string>
    <string name="backup_device">Backup/Restore on device</string>
    <string name="export_email">Export backup files to e-mail</string>
    <string name="google_drive_backup">Google Drive Backup</string>
    <string name="on">On</string>
    <string name="off">Off</string>

</resources>