...
                        IconButton(onClick = { onEvent(CategoryEvent.PopBack) }) {
                            Icon(imageVector = Icons.Default.ArrowBack, contentDescription = null)
                        }
                    },
                    menuItem = listOf(
                        MenuItem(
                            TranslatableString.PlainString("add category"),
                            com.masrofy.component.Icons.VectorIcon(Icons.Default.Add),
                            onClick = {
                                onEvent(CategoryEvent.NavigateToAddEditCategory(-1))
                            }
                        )
                    )
...
            LazyColumn(
                state = state.listState,
                modifier = Modifier
                    .fillMaxSize()
                    .padding(it)
                    .reorderable(state)
                    .testTag("list categories")

            ) {
                items(
                    categoriesState.categories,
                    key = { it.id },
                    contentType = { it.nameCategory }) { category ->
...
