...
                        onTransactionTypeChange = onEvent,
                        selectedType = transactionState.transactionType,
                    )
                }
                InputsTransactions(
                    currentDateTime = transactionState.date.formatShortDate(),
                    currentAccount = transactionState.selectedAccount?.name ?: "Cash",
                    currentCategory = transactionState.transactionCategory ?: "",
                    currentAmount = transactionState.totalAmount,
                    currentNote = transactionState.comment ?: "",
                    onInputChange = rememberInput,
                    onEvent = onEvent,
                    currecny = transactionState.currency,
...
            if (inputData.inputType == InputType.CATEGORY_INPUT) {
                IconButton(modifier = Modifier, onClick = {
                    onEvent(AddEditTransactionEvent.NavigateTo(inputData.inputType))
                }) {
                    Icon(
                        imageVector = Icons.Default.Edit,
                        contentDescription = "add category screen"
                    )
                }
            }
            IconButton(modifier = Modifier, onClick = { onHide() }) {
                Icon(imageVector = Icons.Default.Close, contentDescription = "")
            }
...
